hphp/test/zend/good/ext/json/tests/bug42785.php.skipif
<?php
	if (!extension_loaded("json")) {
		print "skip"; 
	} else if (!setlocale(LC_CTYPE, "de_DE", "de", "german", "ge", "de_DE.ISO8859-1", "ISO8859-1")) {
	        die("skip locale needed for this test is not supported on this platform");
	}
?>