hphp/test/zend/bad/ext/standard/tests/general_functions/var_export-locale.php.skipif
<?php
if (!setlocale(LC_ALL, "german", "de","de_DE","de_DE.ISO8859-1","de_DE.ISO_8859-1","de_DE.UTF-8")) {
        die("skip locale needed for this test is not supported on this platform");
}
?>